# llm-threat-modeling-agents

./: .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  LICENSE  README.md  index.html  main.py  mcp_server.py  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
agents/: compass_agent.py  cve_agent.py  llm_agents.py  maestro_agent.py  recommendation_agent.py  risk_analyzer.py
architecture/: index.html
cli/: index.html
contributing/: index.html
data/: sample_inputs.json
data/plugins/: example_network_layer.json
docs/: architecture.md  cli.md  contributing.md  frameworks.md  index.md  plugins.md  quickstart.md  reports.md
frameworks/: index.html
plugins/: index.html
quickstart/: index.html
reports/: index.html
search/: search_index.json
tests/: test_diff_sarif.py  test_extras.py  test_features.py  test_history_mermaid.py  test_llm_agents.py  test_pipeline.py  test_plugins_and_snapshot.py  test_polish.py  test_reports.py
tests/snapshots/: snapshot_bot.json
utils/: cache.py  compass_threats.py  config.py  csv_export.py  diff.py  explain.py  history.py  init_project.py  maestro_layers.py  matrix.py  mermaid.py  nvd.py  output.py  pdf.py  plugins.py  report.py  sarif.py  schema.py  scoring.py  webhook.py
web/: app.py
