[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-threat-modeling-agents"
version = "0.3.0"
description = "Multi-agent threat modeling framework for LLM/GenAI systems, grounded in MAESTRO and OWASP COMPASS."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Emmanuel Guilherme Junior" }]
keywords = ["llm", "genai", "security", "threat-modeling", "maestro", "compass", "owasp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "tabulate>=0.9.0",
    "colorama>=0.4.6",
]

[project.optional-dependencies]
llm = ["anthropic>=0.34"]
pdf = ["weasyprint>=60"]
web = ["fastapi>=0.110", "uvicorn>=0.27", "python-multipart>=0.0.9"]
mcp = ["mcp>=1.0"]
dev = ["pytest>=7.0", "pytest-cov>=4.1", "ruff>=0.5", "pre-commit>=3.5", "mypy>=1.10"]
docs = ["mkdocs>=1.6", "mkdocs-material>=9.5"]

[project.scripts]
threat-model = "main:main"
threat-model-mcp = "mcp_server:main"

[project.urls]
Homepage = "https://github.com/emmanuelgjr/llm-threat-modeling-agents"
Issues = "https://github.com/emmanuelgjr/llm-threat-modeling-agents/issues"

[tool.setuptools]
py-modules = ["main", "mcp_server"]
packages = ["agents", "utils", "web"]

[tool.setuptools.package-data]
"*" = ["data/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "live_nvd: hits the real NVD API; requires RUN_LIVE_NVD=1",
]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = true
exclude = ["build/", "dist/", "venv/", "tests/"]

[tool.ruff]
line-length = 110
target-version = "py39"
exclude = ["venv", ".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.format]
quote-style = "double"
